@@ -1,0 +1,147 @@
+{
+    "STATUSBAR": {
+        "CLUSTER": "Cluster",
+        "VERSION": "Version",
+        "SNAPSHOT": "SNAPSHOT",
+        "NODES": "Nœuds",
+        "HEALTH": "Santé",
+        "DATA": "Données",
+        "CHECKS": "Contrôles",
+        "CHECK": "Contrôle",
+        "FAILED": "échec",
+        "CLUSTER_OFFLINE": "Cluster hors-ligne",
+        "HELP": "Aide",
+        "CRATE_MANUAL": "Manuel de CrateDB",
+        "DOC_MSG": "Lire la documentation en ligne",
+        "NOTIFICATIONS": "Notifications",
+        "OLD_VERSION_TIP": "Vous utilisez une ancienne version ({{ version }}) de CrateDB",
+        "UPDATE_TIP": "Merci de considérer une mise à jour vers la verion {{ version }}!",
+        "NO_NOTIFICATION": "Oh no! Il n'y a pas encore de notification.",
+        "MARK_ALL_READ": "Marquer comme lu"
+    },
+    "NAVIGATION": {
+        "OVERVIEW": "Aperçu",
+        "CONSOLE": "Console",
+        "TABLE": "Tables",
+        "VIEW": "Vues",
+        "CLUSTER": "Cluster"
+    },
+    "OVERVIEW": {
+        "HEALTH": "Santé",
+        "REPLICATED_DATA": "Données Répliquées",
+        "AVAILABLE_DATA": "Données Disponibles",
+        "TOTAL_RECORDS": "Nombre Total d'Entrées",
+        "UNDERREPL_RECORDS": "Entrées Sous-Répliquées",
+        "UNAVAIL_RECORDS": "Entrées Non-Disponibles",
+        "CLUSTER_LOAD": "Charge de la Cluster",
+        "CLUSTER_CHECKS": "Contrôles de la Cluster",
+        "NODES_CHECKS": "Contrôles des Nœuds",
+        "DISMISS": "Ignorer",
+        "DISMISS_ALL": "Tout ignorer",
+        "AFFECTED_NODES": "Nœuds affectés",
+        "INFO": "INFO",
+        "WARNING": "ALERTE",
+        "CRITICAL": "CRITIQUE"
+    },
+    "CONSOLE": {
+        "TIP": "Entrer une requête pour CrateDB",
+        "HINT": "Indice: Utiliser ⇧ + ⏎ pour soumettre votre requête.",
+        "OPTIONS": "Options",
+        "STORE_CONSOLE": "Stocker l'historique de la console de façon permanente",
+        "CLEAR_HISTORY": "Effacer l'historique",
+        "CLEAR_HISTORY_MSG": "l'entrée dans l'historique de la console a été effacée.",
+        "CLEAR_HISTORY_MSG_PLURAL": "les entrées dans l'historique de la console ont été effacées.",
+        "EXCUTE_QUERY": "Executer la Requête",
+        "SHOW_ERROR_TRACE": "Voir la trace de l'erreur",
+        "SHOW_ERROR_TRACE_HINT": "Selectionnez `Voir la trace de l'erreur` dans les Options de la console pour afficher la trace de l'erreur.",
+        "ERROR": "Erreur!",
+        "RESULT_FROM_QUERY": "Résultat de la requête",
+        "ERROR_TRACE": "TRACE DE L'ERREUR",
+        "FORMAT_RESULTS": "Formatter les résultats",
+        "UNSAFE_INTEGER": "Ce nombre excède l'entier maximum sûr de JavaScript. Pour être certain d'obtenir le bon nomber, coercez-le dans votre requête SQL en utilisant 'field::string'."
+    },
+    "TABLE": {
+        "TITLE": "Tables",
+        "NAME": "Nom",
+        "HEALTH": "Santé",
+        "CONFIG_REPLICAS": "Réplications Configurées",
+        "CONFIG_SHARDS": "Silos Configurés",
+        "STARTED_SHARDS": "Silos Démarrés",
+        "MISSING_SHARDS": "Silos Manquants",
+        "UNDERREPL_SHARDS": "Silos Sous-Répliqués",
+        "TOTAL": "Total",
+        "UNAVAILABLE": "Non-Disponible",
+        "UNDERREPL": "Sous-Repliqués",
+        "SIZE": "Taille",
+        "RECOVERY": "Recovery",
+        "BLOBS": "Blobs",
+        "RECORDS": "Entrées",
+        "PARTITION_COLUMNS": "Colonne de Partition",
+        "PARTITIONS": "Partitions",
+        "ROW": {
+            "IDENT": "Identation",
+            "PARTITION_VALUES": "Valeur de Partition",
+            "CONF_REPLICAS": "Réplications Configurées",
+            "CONF_SHARDS": "Silos Configurés",
+            "STARTED_SHARDS": "Silos Démarrés",
+            "MISSING_SHARDS": "Silos Manquants",
+            "UNDERREPL_SHARDS": "Silos Sous-Répliqués",
+            "TOTAL_RECORDS": "Nombre total d'Entrées",
+            "UNAVAIL_RECORDS": "Entrées Non-Disponibles",
+            "UNDERREPL_RECORDS": "Entrées Sous-Répliquées",
+            "SIZE": "Taille"
+        },
+        "SCHEMA": "Schema",
+        "TYPE": "Type"
+    },
+    "VIEW": {
+        "TITLE": "Vues",
+        "NAME": "Nom",
+        "TYPE": "Type",
+        "DEFINITION": "Définition",
+        "COLUMNS": "Colonnes"
+    },
+    "NODE": {
+        "NOT_REACHABLE_MSG": "Le cluster n'est pas joignable",
+        "NAME": "Nom",
+        "NODES": "Nœuds",
+        "OVERVIEW": "Aperçu",
+        "HEALTH": "Santé",
+        "HOSTNAME": "Nom d'hôte",
+        "CRATE_VERSION": "Version de CrateDB",
+        "SNAPSHOT": "snapshot",
+        "HTTP_ENDPOINT": "Point de connection HTTP",
+        "CPU_USAGE": "Utilisation du CPU",
+        "HEAP_USAGE": "Utilisation du tas",
+        "DISK_USAGE": "Utilisation du disque",
+        "LOAD": "Charge",
+        "MINUTES": "min",
+        "CPU_CORES": " CPU",
+        "CORES": "Cœurs",
+        "CRATE_CPU_USAGE": "Utilisation du CPU par CrateDB",
+        "SHARDS": "Silos",
+        "INITIALIZING": "Initialisation",
+        "STARTED": "Démarré",
+        "REALLOCATING": "Réallocation",
+        "POST_RECOVERY": "Après Récupération",
+        "DISK_OPERATIONS": "Operations du Disques",
+        "READ": "Lecture",
+        "WRITE": "Écriture",
+        "OPS": "OPS",
+        "READS": "Lectures",
+        "WRITES": "Écritures"
+    },
+    "HELP": {
+        "TITLE": "À la recherche d'aide?",
+        "STACK_OVERFLOW_TITLE": "Stack Overflow",
+        "STACK_OVERFLOW_MSG": "Parcourez Stack Overflow pour les problèmes communs.",
+        "SLACK_TITLE": "Slack",
+        "SLACK_MSG": "Posez une question aux ignénieurs de Crate.io sur Slack.",
+        "GITHUB_TITLE": "GitHub",
+        "GITHUB_MSG": "Codez avec nous sur GitHub.",
+        "DOCUMENTATION_TITLE": "Documentation de CrateDB",
+        "DOCUMENTATION_MSG": "Lire la documentation de CrateDB.",
+        "ENTERPRISE_TITLE": "Support Enterprise",
+        "ENTERPRISE_MSG": "Pour un support enterprise, merci de consulter notre page des tarifs."
+    }
+}
